--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,18 @@
 			<artifactId>spring-core</artifactId>
 			<version>5.1.5.RELEASE</version>
 		</dependency>
+		<dependency>
+    <groupId>net.sourceforge.jwebunit</groupId>
+    <artifactId>jwebunit-htmlunit-plugin</artifactId>
+    <version>3.3</version>
+    <scope>test</scope>
+</dependency>
+<dependency>
+    <groupId>junit</groupId>
+    <artifactId>junit</artifactId>
+    <version>4.12</version>
+    <scope>test</scope>
+</dependency>
 		<!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
 		<dependency>
 			<groupId>org.springframework</groupId>
